--- a/Breach_Directory_Test.ipynb
+++ b/Breach_Directory_Test.ipynb
@@ -1,187 +1,131 @@
-{
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNNNKZmy+hn/Bo7ZAiWs/mJ",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/sk01c/Breach-Directory-Prototype/blob/main/Breach_Directory_Test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8fo0LCIkhoSn",
-        "outputId": "78296e75-f62d-4678-9277-3b2bd0b8a89d"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Breach Directory. Press enter to continue\n",
-            "Firstly, could you tell me if this incident was self declared or not? Type yes/no\n",
-            "no\n",
-            "Please enter the nature of discovery given the following options:\n",
-            "1) Data from HR\n",
-            "2) Data from internal audit\n",
-            "3) Data from external audit\n",
-            "4) Other\n",
-            "Please select a number\n",
-            "1\n",
-            "Please enter the name of the person who is under investigation\n",
-            "susan su\n",
-            "Please enter the date of the incident in the form dd/mm/yyyy\n",
-            "20/10/2023\n",
-            "Please enter the entity in which this incident took place\n",
-            "smbc bi london\n",
-            "Please enter the department in which this took place\n",
-            "rmd\n",
-            "Before we continue, we need to clarify if this breach resulted in data loss. Please enter yes or no\n",
-            "g&e\n",
-            "Invalid input. Please enter one of the following: yes, no\n",
-            "Before we continue, we need to clarify if this breach resulted in data loss. Please enter yes or no\n",
-            "no\n",
-            "Was this a case of MNPI (insider information involved)? Please enter yes or no\n",
-            "no\n",
-            "Please enter which root cause you see as most apt for this breach: \n",
-            "1) Human Error \n",
-            "2) Negligence\n",
-            "3) Intentional\n",
-            "4) Process Error\n",
-            "5) Other\n",
-            "Please select a number to continue\n",
-            "1\n",
-            "Now we will assign a score to the breach severity. For the following criteria, enter 1 if they occurred in the breach, 0 otherwise\n",
-            "Press enter to continue\n",
-            "Data/Financial Loss\n",
-            "0\n",
-            "Internal Conflict\n",
-            "1\n",
-            "Intentional Misuse of Confidential Data\n",
-            "1\n",
-            "Customer Detriment\n",
-            "0\n",
-            "Market Impact\n",
-            "0\n",
-            "Reputational Impact\n",
-            "1\n",
-            "**HERE BASED ON WEIGHTINGS, WE CAN CALCULATE AND ASSIGN RATING**\n",
-            "Press enter to continue\n",
-            "      Names  Self Declared Nature of Discovery       Dates        Entities  \\\n",
-            "0  susan su              0                   1  20/10/2023  smbc bi london   \n",
-            "\n",
-            "  Department Breach Category  MNPI Root Cause Analysis  Data/Financial Loss  \\\n",
-            "0        rmd            None     0                   1                    0   \n",
-            "\n",
-            "   Internal Conflict  Intentional Misuse of Confidential Data  \\\n",
-            "0                  1                                        1   \n",
-            "\n",
-            "   Customer Detriment  Market Impact  Reputational Impact  \n",
-            "0                   0              0                    1  \n"
-          ]
-        }
-      ],
-      "source": [
-        "import pandas as pd\n",
-        "\n",
-        "def get_input(prompt, options=None):\n",
-        "    \"\"\" General-purpose input function with optional validation for predefined options. \"\"\"\n",
-        "    while True:\n",
-        "        response = input(prompt).strip().lower()\n",
-        "        if options and response not in options:\n",
-        "            print(f\"Invalid input. Please enter one of the following: {', '.join(options)}\")\n",
-        "        else:\n",
-        "            return response\n",
-        "\n",
-        "def append_all(data, keys, values):\n",
-        "    \"\"\" Append values to the respective keys in the data dictionary. \"\"\"\n",
-        "    for key, value in zip(keys, values):\n",
-        "        data[key].append(value)\n",
-        "\n",
-        "# Initialize lists in the dictionary directly\n",
-        "data = {\n",
-        "    'Names': [],\n",
-        "    'Self Declared': [],\n",
-        "    'Nature of Discovery': [],\n",
-        "    'Dates': [],\n",
-        "    'Entities': [],\n",
-        "    'Department': [],\n",
-        "    'Breach Category': [],  # Note: This wasn't being appended to previously, adding None for each entry\n",
-        "    'MNPI': [],\n",
-        "    'Root Cause Analysis': [],\n",
-        "    'Data/Financial Loss': [],\n",
-        "    'Internal Conflict': [],\n",
-        "    'Intentional Misuse of Confidential Data': [],\n",
-        "    'Customer Detriment': [],\n",
-        "    'Market Impact': [],\n",
-        "    'Reputational Impact': []\n",
-        "}\n",
-        "\n",
-        "input(\"Breach Directory. Press enter to continue\")\n",
-        "\n",
-        "self_declared = get_input(\"Firstly, could you tell me if this incident was self declared or not? Type yes/no\\n\", options=[\"yes\", \"no\"])\n",
-        "append_all(data, ['Self Declared', 'Nature of Discovery'],\n",
-        "           [1 if self_declared == \"yes\" else 0, \"Self declared\" if self_declared == \"yes\" else \"\"])\n",
-        "\n",
-        "if self_declared == \"no\":\n",
-        "    options = [\"1\", \"2\", \"3\", \"4\"]\n",
-        "    nature_of_discovery = get_input(\"Please enter the nature of discovery given the following options:\\n\"\n",
-        "                                    \"1) Data from HR\\n2) Data from internal audit\\n3) Data from external audit\\n4) Other\\nPlease select a number\\n\",\n",
-        "                                    options=options)\n",
-        "    data['Nature of Discovery'][-1] = nature_of_discovery  # Replace the last element\n",
-        "\n",
-        "append_all(data, ['Names', 'Dates', 'Entities', 'Department', 'Breach Category'],\n",
-        "           [get_input(\"Please enter the name of the person who is under investigation\\n\"),\n",
-        "            get_input(\"Please enter the date of the incident in the form dd/mm/yyyy\\n\"),\n",
-        "            get_input(\"Please enter the entity in which this incident took place\\n\"),\n",
-        "            get_input(\"Please enter the department in which this took place\\n\"),\n",
-        "            None])  # Assuming 'Breach Category' doesn't change within this flow\n",
-        "\n",
-        "data_loss = get_input(\"Before we continue, we need to clarify if this breach resulted in data loss. Please enter yes or no\\n\", options=[\"yes\", \"no\"])\n",
-        "if data_loss == \"yes\":\n",
-        "    input(\"Please contact ITSD to ensure this issue has been dealt with before returning. Press enter to continue once contacted\\n\")\n",
-        "\n",
-        "mnpi = get_input(\"Was this a case of MNPI (insider information involved)? Please enter yes or no\\n\", options=[\"yes\", \"no\"])\n",
-        "data['MNPI'].append(1 if mnpi == \"yes\" else 0)\n",
-        "\n",
-        "root_cause = get_input(\"Please enter which root cause you see as most apt for this breach: \\n1) Human Error \\n2) Negligence\\n3) Intentional\\n4) Process Error\\n5) Other\\nPlease select a number to continue\\n\", options=[\"1\", \"2\", \"3\", \"4\", \"5\"])\n",
-        "data['Root Cause Analysis'].append(root_cause)\n",
-        "\n",
-        "input(\"Now we will assign a score to the breach severity. For the following criteria, enter 1 if they occurred in the breach, 0 otherwise\\nPress enter to continue\")\n",
-        "criteria = ['Data/Financial Loss', 'Internal Conflict', 'Intentional Misuse of Confidential Data', 'Customer Detriment', 'Market Impact', 'Reputational Impact']\n",
-        "for crit in criteria:\n",
-        "    response = get_input(f\"{crit}\\n\", options=[\"1\", \"0\"])\n",
-        "    data[crit].append(int(response))\n",
-        "\n",
-        "input(\"**HERE BASED ON WEIGHTINGS, WE CAN CALCULATE AND ASSIGN RATING**\\nPress enter to continue\")\n",
-        "\n",
-        "# Automatically display the DataFrame without asking for additional input\n",
-        "df = pd.DataFrame(data)\n",
-        "print(df)\n"
-      ]
-    }
-  ]
+import pandas as pd
+import numpy as np
+
+pd.set_option('display.max_rows', None)  # or use a specific number like 100
+pd.set_option('display.max_columns', None)  # or a specific number of columns
+pd.set_option('display.width', 1000)  # adjust as per your screen size
+pd.set_option('display.colheader_justify', 'center')  # Center justify column headers
+pd.set_option('display.precision', 3)  # Number of decimal places in columns
+
+def get_input(prompt, options=None, min_val=None, max_val=None):
+    """ General-purpose input function with optional validation for predefined options or numerical range. """
+    while True:
+        response = input(prompt).strip().lower()
+        if options and response not in options:
+            print(f"Invalid input. Please enter one of the following: {', '.join(options)}")
+        elif min_val is not None and max_val is not None:
+            try:
+                response = int(response)
+                if min_val <= response <= max_val:
+                    return response
+                else:
+                    print(f"Please enter a value between {min_val} and {max_val}")
+            except ValueError:
+                print("Please enter a valid integer.")
+        else:
+            return response
+
+def append_all(data, keys, values):
+    """ Append values to the respective keys in the data dictionary. """
+    for key, value in zip(keys, values):
+        data[key].append(value)
+
+# Initialize lists in the dictionary with None as placeholders
+data = {
+    'Names': [],
+    'Self Declared': [],
+    'Nature of Discovery': [],
+    'Dates': [],
+    'Entities': [],
+    'Department': [],
+    'Breach Category': [],
+    'MNPI': [],
+    'Root Cause Analysis': [],
+    'Data/Financial Loss': [],
+    'Internal Conflict': [],
+    'Intentional Misuse of Confidential Data': [],
+    'Customer Detriment': [],
+    'Market Impact': [],
+    'Reputational Impact': [],
+    'Risk Score': [],
+    'Risk Rating': []
 }
+
+input("Breach Directory. Press enter to continue")
+
+self_declared = get_input("Firstly, could you tell me if this incident was self declared or not? Type yes/no\n", options=["yes", "no"])
+append_all(data, ['Self Declared', 'Nature of Discovery'],
+           [1 if self_declared == "yes" else 0, "Self declared" if self_declared == "yes" else ""])
+
+if self_declared == "no":
+    options = ["1", "2", "3", "4"]
+    nature_of_discovery = get_input("Please enter the nature of discovery given the following options:\n"
+                                    "1) Data from HR\n2) Data from internal audit\n3) Data from external audit\n4) Other\nPlease select a number\n",
+                                    options=options)
+    data['Nature of Discovery'].append(nature_of_discovery)  # Append instead of replacing
+
+append_all(data, ['Names', 'Dates', 'Entities', 'Department', 'Breach Category'],
+           [get_input("Please enter the name of the person who is under investigation\n"),
+            get_input("Please enter the date of the incident in the form dd/mm/yyyy\n"),
+            get_input("Please enter the entity in which this incident took place\n"),
+            get_input("Please enter the department in which this took place\n"),
+            get_input("Please enter the breach category\n")])
+
+data_loss = get_input("Before we continue, we need to clarify if this breach resulted in data loss. Please enter yes or no\n", options=["yes", "no"])
+if data_loss == "yes":
+    input("Please contact ITSD to ensure this issue has been dealt with before returning. Press enter to continue once contacted\n")
+
+mnpi = get_input("Was this a case of MNPI (insider information involved)? Please enter yes or no\n", options=["yes", "no"])
+data['MNPI'].append(1 if mnpi == "yes" else 0)
+if mnpi == "yes":
+    input("Please contact the Compliance Advisory Team to ensure this issue has been dealt with before returning. Press enter to continue once contacted\n")
+
+root_cause = get_input("Please enter which root cause you see as most apt for this breach: \n1) Human Error \n2) Negligence\n3) Intentional\n4) Process Error\n5) Other\nPlease select a number to continue\n", options=["1", "2", "3", "4", "5"])
+data['Root Cause Analysis'].append(root_cause)
+
+input("Now we will assign a score to the breach severity. For the following criteria, please enter a severity rating from 0 to 10\nPress enter to continue")
+criteria = ['Data/Financial Loss', 'Internal Conflict', 'Intentional Misuse of Confidential Data', 'Customer Detriment', 'Market Impact', 'Reputational Impact']
+for crit in criteria:
+    print(f"Please rate the severity of '{crit}':")
+    response = get_input(f"Severity of '{crit}' (0-10):\n", min_val=0, max_val=10)
+    data[crit].append(int(response))  # Ensure the response is converted to an integer
+
+# Ensure all lists in data have the same length
+max_length = max(len(v) for v in data.values())
+for key, value in data.items():
+    if len(value) < max_length:
+        data[key].extend([None] * (max_length - len(value)))
+
+weights = {
+    'Data/Financial Loss': 7,
+    'Internal Conflict': 3,
+    'Intentional Misuse of Confidential Data': 8,
+    'Customer Detriment': 8,
+    'Market Impact': 8,
+    'Reputational Impact': 5
+}
+
+total_risk_score = []
+
+for i in range(max_length):
+    total_risk_score.append(0)
+    for crit in criteria:
+        score = data[crit][i]
+        if isinstance(score, int):
+            weight = weights[crit]
+            risk_score = score * weight
+
+    data["Risk Score"].append(risk_score)
+
+data["Risk Rating"] = ["High" if score > 80 else "Medium" if score > 40 else "Low" for score in total_risk_score]
+
+max_length = np.max([len(v) for v in data.values()])
+
+for key, value in data.items():
+    if len(value) < max_length:
+        data[key].extend([None] * (max_length - len(value)))
+
+df = pd.DataFrame(data)
+breach_log = get_input("Type 'okay' to see how this tool could be used to generate a breach log\n", options=["okay", "no"])
+if breach_log == 'okay':
+    print(df)
