--- a/Breach_Directory_Test.ipynb
+++ b/Breach_Directory_Test.ipynb
@@ -1,131 +1,167 @@
 import pandas as pd
-import numpy as np
+import tkinter as tk
+from tkinter import messagebox, simpledialog
 
-pd.set_option('display.max_rows', None)  # or use a specific number like 100
-pd.set_option('display.max_columns', None)  # or a specific number of columns
-pd.set_option('display.width', 1000)  # adjust as per your screen size
-pd.set_option('display.colheader_justify', 'center')  # Center justify column headers
-pd.set_option('display.precision', 3)  # Number of decimal places in columns
 
-def get_input(prompt, options=None, min_val=None, max_val=None):
-    """ General-purpose input function with optional validation for predefined options or numerical range. """
-    while True:
-        response = input(prompt).strip().lower()
-        if options and response not in options:
-            print(f"Invalid input. Please enter one of the following: {', '.join(options)}")
-        elif min_val is not None and max_val is not None:
-            try:
-                response = int(response)
-                if min_val <= response <= max_val:
-                    return response
-                else:
-                    print(f"Please enter a value between {min_val} and {max_val}")
-            except ValueError:
-                print("Please enter a valid integer.")
-        else:
-            return response
+# Function to get input from user with a prompt
+def get_input(prompt):
+    return simpledialog.askstring("Input", prompt)
 
-def append_all(data, keys, values):
-    """ Append values to the respective keys in the data dictionary. """
+# Function to get yes/no input from user with a prompt
+def get_yes_no(prompt):
+    return "yes" if messagebox.askyesno("Input", prompt) else "no"
+
+# Function to get input from user with predefined options
+def get_option(prompt, options):
+    return simpledialog.askstring("Input", f"{prompt}\nOptions: {', '.join(options)}") if options else None
+
+# Function to get numeric input from user with a prompt
+def get_numeric_input(prompt):
+    return simpledialog.askinteger("Input", prompt)
+
+# Function to append data to the data dictionary
+def append_data(data, keys, values):
     for key, value in zip(keys, values):
         data[key].append(value)
 
-# Initialize lists in the dictionary with None as placeholders
-data = {
-    'Names': [],
-    'Self Declared': [],
-    'Nature of Discovery': [],
-    'Dates': [],
-    'Entities': [],
-    'Department': [],
-    'Breach Category': [],
-    'MNPI': [],
-    'Root Cause Analysis': [],
-    'Data/Financial Loss': [],
-    'Internal Conflict': [],
-    'Intentional Misuse of Confidential Data': [],
-    'Customer Detriment': [],
-    'Market Impact': [],
-    'Reputational Impact': [],
-    'Risk Score': [],
-    'Risk Rating': []
-}
+# Function to update the breach log display
+# Function to update the breach log display
+def update_breach_log_display(df, text_widget):
+    text_widget.config(state=tk.NORMAL)
+    text_widget.delete(1.0, tk.END)
 
-input("Breach Directory. Press enter to continue")
+    # Get column headings
+    headers = list(df.columns)
 
-self_declared = get_input("Firstly, could you tell me if this incident was self declared or not? Type yes/no\n", options=["yes", "no"])
-append_all(data, ['Self Declared', 'Nature of Discovery'],
-           [1 if self_declared == "yes" else 0, "Self declared" if self_declared == "yes" else ""])
+    # Format data
+    formatted_data = []
+    for index, row in df.iterrows():
+        formatted_row = "\n".join([f"{header}: {row[header]}" for header in headers])
+        formatted_data.append(formatted_row)
 
-if self_declared == "no":
-    options = ["1", "2", "3", "4"]
-    nature_of_discovery = get_input("Please enter the nature of discovery given the following options:\n"
-                                    "1) Data from HR\n2) Data from internal audit\n3) Data from external audit\n4) Other\nPlease select a number\n",
-                                    options=options)
-    data['Nature of Discovery'].append(nature_of_discovery)  # Append instead of replacing
+    # Concatenate headers with corresponding values
+    formatted_text = "\n\n".join(formatted_data)
 
-append_all(data, ['Names', 'Dates', 'Entities', 'Department', 'Breach Category'],
-           [get_input("Please enter the name of the person who is under investigation\n"),
-            get_input("Please enter the date of the incident in the form dd/mm/yyyy\n"),
-            get_input("Please enter the entity in which this incident took place\n"),
-            get_input("Please enter the department in which this took place\n"),
-            get_input("Please enter the breach category\n")])
+    # Insert formatted text into text widget
+    text_widget.insert(tk.END, formatted_text)
 
-data_loss = get_input("Before we continue, we need to clarify if this breach resulted in data loss. Please enter yes or no\n", options=["yes", "no"])
-if data_loss == "yes":
-    input("Please contact ITSD to ensure this issue has been dealt with before returning. Press enter to continue once contacted\n")
+    text_widget.config(state=tk.DISABLED)
 
-mnpi = get_input("Was this a case of MNPI (insider information involved)? Please enter yes or no\n", options=["yes", "no"])
-data['MNPI'].append(1 if mnpi == "yes" else 0)
-if mnpi == "yes":
-    input("Please contact the Compliance Advisory Team to ensure this issue has been dealt with before returning. Press enter to continue once contacted\n")
+# Function to collect breach data from user
+def collect_breach_data(root, text_widget):
+    # Initialize data dictionary
+    data = {
+        'Names': [],
+        'Self Declared': [],
+        'Nature of Discovery': [],
+        'Dates': [],
+        'Entities': [],
+        'Department': [],
+        'Breach Category': [],
+        'MNPI': [],
+        'Root Cause Analysis': [],
+        'Data/Financial Loss': [],
+        'Internal Conflict': [],
+        'Intentional Misuse of Confidential Data': [],
+        'Customer Detriment': [],
+        'Market Impact': [],
+        'Reputational Impact': [],
+        'Risk Score': [],
+        'Risk Rating': []
+    }
 
-root_cause = get_input("Please enter which root cause you see as most apt for this breach: \n1) Human Error \n2) Negligence\n3) Intentional\n4) Process Error\n5) Other\nPlease select a number to continue\n", options=["1", "2", "3", "4", "5"])
-data['Root Cause Analysis'].append(root_cause)
+    while True:
+        # Collect self-declared information
+        self_declared = get_yes_no("Was this incident self-declared?")
+        append_data(data, ['Self Declared'], [self_declared])
 
-input("Now we will assign a score to the breach severity. For the following criteria, please enter a severity rating from 0 to 10\nPress enter to continue")
-criteria = ['Data/Financial Loss', 'Internal Conflict', 'Intentional Misuse of Confidential Data', 'Customer Detriment', 'Market Impact', 'Reputational Impact']
-for crit in criteria:
-    print(f"Please rate the severity of '{crit}':")
-    response = get_input(f"Severity of '{crit}' (0-10):\n", min_val=0, max_val=10)
-    data[crit].append(int(response))  # Ensure the response is converted to an integer
+        # Collect nature of discovery if not self-declared
+        if self_declared == "no":
+            nature_of_discovery = get_option("Nature of Discovery:", ["Data from HR", "Data from internal audit",
+                                                                      "Data from external audit", "Other"])
+            append_data(data, ['Nature of Discovery'], [nature_of_discovery])
+        else:
+            append_data(data, ['Nature of Discovery'], [""])
 
-# Ensure all lists in data have the same length
-max_length = max(len(v) for v in data.values())
-for key, value in data.items():
-    if len(value) < max_length:
-        data[key].extend([None] * (max_length - len(value)))
+        # Collect general breach information
+        names = get_input("Name of the person under investigation:")
+        dates = get_input("Date of the incident (dd/mm/yyyy):")
+        entities = get_input("Entity where the incident took place:")
+        department = get_input("Department in which the incident occurred:")
+        breach_category = get_input("Breach Category:")
+        # Append collected data to the data dictionary
+        append_data(data, ['Names', 'Dates', 'Entities', 'Department', 'Breach Category'],
+                    [names, dates, entities, department, breach_category])
 
-weights = {
-    'Data/Financial Loss': 7,
-    'Internal Conflict': 3,
-    'Intentional Misuse of Confidential Data': 8,
-    'Customer Detriment': 8,
-    'Market Impact': 8,
-    'Reputational Impact': 5
-}
+        # Notify about data loss
+        if get_yes_no("Did this breach result in data loss?") == "yes":
+            messagebox.showinfo("Information", "Contact ITSD to ensure the issue is resolved.")
 
-total_risk_score = []
+        # Collect MNPI information
+        append_data(data, ['MNPI'], [get_yes_no("Was MNPI involved?")])
 
-for i in range(max_length):
-    total_risk_score.append(0)
-    for crit in criteria:
-        score = data[crit][i]
-        if isinstance(score, int):
-            weight = weights[crit]
-            risk_score = score * weight
+        # Collect root cause analysis
+        root_cause = get_option("Root Cause Analysis:", ["Human Error", "Negligence", "Intentional", "Process Error", "Other"])
+        append_data(data, ['Root Cause Analysis'], [root_cause])
 
-    data["Risk Score"].append(risk_score)
+        # Collect severity ratings
+        criteria = ['Data/Financial Loss', 'Internal Conflict', 'Intentional Misuse of Confidential Data',
+                    'Customer Detriment', 'Market Impact', 'Reputational Impact']
+        weights = {'Data/Financial Loss': 7, 'Internal Conflict': 3, 'Intentional Misuse of Confidential Data': 8,
+                   'Customer Detriment': 8, 'Market Impact': 8, 'Reputational Impact': 5}
+        severity_ratings = {crit: get_numeric_input(f"Severity of '{crit}' (0-10):") for crit in criteria}
+        for crit, severity in severity_ratings.items():
+            data[crit].append(severity)
 
-data["Risk Rating"] = ["High" if score > 80 else "Medium" if score > 40 else "Low" for score in total_risk_score]
+        # Check if user wants to continue entering data
+        if get_yes_no("Continue entering data?") != 'yes':
+            break
 
-max_length = np.max([len(v) for v in data.values()])
+    # Ensure all arrays have the same length
+    max_length = max(len(values) for values in data.values())
+    for key, values in data.items():
+        while len(values) < max_length:
+            data[key].append("")
 
-for key, value in data.items():
-    if len(value) < max_length:
-        data[key].extend([None] * (max_length - len(value)))
+    # Calculate total risk score and risk rating
+    total_risk_score = [sum(data[crit][i] * weights[crit] for crit in criteria if isinstance(data[crit][i], int)) for i in range(len(data['Names']))]
+    risk_ratings = ["High" if score > 80 else "Medium" if score > 40 else "Low" for score in total_risk_score]
 
-df = pd.DataFrame(data)
-breach_log = get_input("Type 'okay' to see how this tool could be used to generate a breach log\n", options=["okay", "no"])
-if breach_log == 'okay':
-    print(df)
+    # Update data dictionary with risk score and rating
+    data['Risk Score'] = total_risk_score
+    data['Risk Rating'] = risk_ratings
+
+    # Create DataFrame from data dictionary
+    df = pd.DataFrame(data)
+
+    # Update breach log display
+    update_breach_log_display(df, text_widget)
+
+    # Save data to CSV file
+    with open('breach_log.csv', 'a') as f:
+        df.to_csv(f, index=False, header=f.tell() == 0)
+
+    # Display completion message
+    messagebox.showinfo("Information", "Breach log updated.")
+
+# Main function
+def main():
+    root = tk.Tk()
+    root.title("Breach Directory")
+
+    # Title label
+    title_label = tk.Label(root, text="Breach Directory", font=("Helvetica", 16, "bold"))
+    title_label.pack(pady=10)
+
+    # Text widget for breach log display
+    text_widget = tk.Text(root, height=20, width=150)
+    text_widget.pack(padx=10, pady=10)
+
+    # Collect breach data
+    collect_breach_data(root, text_widget)
+
+    root.mainloop()
+
+# Run main function if the script is executed directly
+if __name__ == "__main__":
+    main()
